--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     </div>
 
     <script src="/Overworld.js"></script>
+    <script src="/GameObject.js"></script>
+    <script src="/Sprite.js"></script>
     <script src="/init.js"></script>
 
 </body>
