--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <script src="/Player.js"></script>
     <script src="/Sprite.js"></script>
     <script src="/OverworldMap.js"></script>
+    <script src="/OverworldEvent.js"></script>
     <script src="/init.js"></script>
 
 </body>
